[package]
name = "aann"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aann"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
numpy = "0.19"
rayon = "1.8.0"

[dependencies.pyo3]
version = "0.19.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
