[package]
name = "aann"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aann"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "0.17", features = ["rayon"] }
numpy = "0.29"
rayon = "1.8.0"

[dependencies.pyo3]
version = "0.29.0"
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
features = ["abi3-py310"]

[profile.release]
codegen-units = 1
lto = "fat"